# nm

./: CMakeLists.txt
src/: main.c  msg.c  msg.h  nm.c  nm.h  processs.c  processs.h
